<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/form_gris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#f2f2f3"
                android:padding="5dp"
                android:text="@string/tarjeta_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tarjeta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#e8e9ef"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#A6A6A6"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#f2f2f3"
                android:padding="5dp"
                android:text="@string/saldo_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/saldo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#e8e9ea"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#A6A6A6"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#f2f2f3"
                android:padding="5dp"
                android:text="@string/fecha_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#e8e9ea"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/btn_guardar"
                android:textStyle="bold"
                android:enabled="false" />

            <Button
                android:id="@+id/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_red"
                android:text="@string/btn_cerrar"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>