<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:ignore="UselessParent" >

    <LinearLayout
        style="@style/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent" >

            <EditText
                android:id="@+id/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_123_ligth"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/number_hint"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:paddingLeft="15dp" >

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search_inverse" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/form_gris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_instruction"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/lbl_instrucc"
            android:textAppearance="@style/Theme.Micard"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <com.viewpagerindicator.LinePageIndicator
            android:id="@+id/indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dip" />

    </LinearLayout>

</LinearLayout>