<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:ignore="UselessParent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal" >

        <LinearLayout
            style="@style/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="beginning|middle" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:padding="5dp"
                    android:src="@drawable/noimage" />

                <LinearLayout
                    style="@style/form_gris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/lbltarjeta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="3dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="3dp"
                        android:text="@string/no_tarjeta"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#A6A6A6"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tarjeta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/rutaimagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                style="@style/form_gris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:text="@string/lbl_nombre"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#A6A6A6"
                    android:orientation="vertical" >
                </LinearLayout>

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_menu_usuario"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_green"
                    android:text="@string/btn_guardar"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_red"
                    android:text="@string/btn_cancel"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>